Add transfer button

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,14 @@
   </div>
   <div class="container">
     <button id="start">Start Speech Recognition</button>
-    <button id="end">End Speech Recognition (Right-Click)</button>
+    <button id="end">End Speech Recognition</button>
+  </div>
+  <div class="container">
+    <button id="xfer">Transfer Call</button>
   </div>
   <script src="js/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
   <script src="js/speech.js"></script>
+  <script src="js/analytics.js"></script>
 </body>
 
 </html>
