--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,13 @@
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>T-Gist Live Transcription Portal</title>
+    <link rel="stylesheet" href="global-styles.css" />
+    <link rel="stylesheet" href="build/bundle.css" />
+  </head>
 
-<head>
-  <title>Speech Client</title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-</head>
-
-<body>
-  <div class="container">
-    <div>Select your role:</div>
-    <div><label><input type="radio" name="speaker" id="speaker-agent" checked /> Agent</label></div>
-    <div><label><input type="radio" name="speaker" id="speaker-customer" /> Customer</label></div>
-  </div>
-  <div class="container">
-    <button id="start">Start Speech Recognition</button>
-    <button id="end">End Speech Recognition</button>
-  </div>
-  <div class="container">
-    <button id="xfer">Transfer Call</button>
-  </div>
-  <script src="js/microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
-  <script src="js/speech.js"></script>
-  <script src="js/analytics.js"></script>
-</body>
-
+  <body>
+    <script src="build/bundle.js"></script>
+  </body>
 </html>
